--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <div class="page">
         <header class="header">
             <div class="header__logo"></div>
-            <a href="#" class="header__lang-link">Ru</a>
-            <a href="#" class="header__lang-link">En</a>
+            <div class="header__lang-links">
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+                <a href="#" class="header__lang-link">En</a>
+            </div>
         </header>
         <main class="main">
             <section class="lead">
@@ -50,7 +52,7 @@
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                        <a target="_blank" href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                     </div>
                     <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                     <div class="place__text">
@@ -62,7 +64,7 @@
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+                        <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
                     </div>
                     <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
                     <div class="place__text">
@@ -74,7 +76,7 @@
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link">YouTube</a>
                     </div>
                     <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                     <div class="place__text">
@@ -86,7 +88,7 @@
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                        <a target="_blank" href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/place-winter-baikal.jpg" alt="Бакал" class="place__image">
                     <div class="place__text">
@@ -98,7 +100,7 @@
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                        <a target="_blank" href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                     <div class="place__text">
@@ -107,28 +109,26 @@
                 </div>
             </section>
             <section class="cover">
-                <div class="cover__overlay">
-                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__map">
-                        <h2 class="cover__title">До Байкала «на собаках»</h2>
-                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                        <div class="cover__opacity"></div>
-                    </a>
-                </div>
+                <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                    <div class="cover__opacity"></div>
+                </a>
                 <div class="cover__background"></div>
             </section>
         </main>
         <footer class="footer">
-            <ul class="footer__links">
-                <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-                <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-                <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-                <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-                <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
-            </ul>
+            <nav>
+                <ul class="footer__links">
+                <li class="footer__link-element"><a target="_blank" class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+                <li class="footer__link-element"><a target="_blank" class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+                <li class="footer__link-element"><a target="_blank" class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+                <li class="footer__link-element"><a target="_blank" class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+                <li class="footer__link-element"><a target="_blank" class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+                </ul>
+            </nav>
             <p class="footer__copyright">&copy; 2023. Шембек Михаил</p>
         </footer>
-
-
 
     </div>
 </body>
